--- a/assets/web/css/style.css
+++ b/assets/web/css/style.css
@@ -161,12 +161,13 @@ html {
   background: #09171b;
   float:left;
     z-index: 9999;
+/*    display: none;*/
 }
 .contentRight{
   width:80%;
 /*  height: 70%;*/
 /*  background: red;*/
-  float:right;
+  float:left;
   overflow-y:scroll;  
   margin-top:80px;
 /*    padding-left: 260px;*/
@@ -753,8 +754,8 @@ a.author:hover {
     position:absolute;
     top:-40px;
     border-top:solid 1px #eee;
-    width:78%;
-    right:0
+    width:80%;
+    right:0;
 }
 a.totCom {
     font: normal 14px 'OpenSansRegular', Arial, Helvetica, sans-serif;
@@ -889,6 +890,134 @@ p.pMainComm {
 }
 .listCommentMain {
     border:none !important;
+}
+.boxUpload {
+    width:100%;
+/*    height: 1000px;*/
+    background: #eee;
+    position: absolute;
+    z-index: 9999;
+    margin-top:7.5px;
+}
+.boxUploadIn {
+    width:80%;
+    height: 100%;
+    
+}
+input.titleUpload {
+    background: none;
+    border:none;
+    color:#000;
+    font: normal 24px 'OpenSansRegular', Arial, Helvetica, sans-serif;
+    outline: none;
+    border-bottom: solid 1px #ccc;
+    width:450px;
+    padding:10px 0;
+}
+textarea.descUpload {
+    background: none;
+    border:none;
+    font: normal 16px/28px 'OpenSansRegular', Arial, Helvetica, sans-serif;
+    outline: none;
+    color:#333;
+     width:450px;
+    max-width: 450px;
+    min-height: 200px;
+}
+.imgCatCont2 {
+    width:400px;
+    height: 400px;
+    background: #333;
+    margin:0 0 80px 40px;
+    border-radius: 3px;
+    text-align: center;
+}
+.imgCatCont2 a {
+    text-decoration: none;   
+    font: normal 16px/28px 'OpenSansRegular', Arial, Helvetica, sans-serif;
+    color:#fff;
+    text-transform: uppercase;
+    margin-top:160px;
+    display: block;
+}
+.imgCatCont2 i {
+    font-size: 60px;
+}   
+
+.imgCatCont2 a:hover , .imgCatCont2 i:hover {
+    color:#40bfaa;
+}
+.loginPage {
+    width:100%;
+    height: 100%;
+/*    background:url("../images/login.jpg") no-repeat;*/
+}
+.loginPage img {
+    width:100%;
+    
+    
+}
+.imgLogin {
+    position: absolute;
+}
+.introLogin {
+    width:50%;
+    height: 1000px;
+    background: rgba(23,167,82,0.4);
+    position: absolute;
+    left:0;
+    z-index: 9;
+}
+.formLogin {
+    width:40%;
+    height: 1000px;
+/*    background: rgba(23,167,82,0.4);*/
+    position: absolute;
+    right:0;
+    z-index: 9;
+    padding:180px 0 0 140px;
+}
+.formLogin h1 {
+    font: normal 34px 'OpenSansSemibold', Arial, Helvetica, sans-serif;
+    color:#000;
+/*    margin:100px 0 0 100px;*/
+}
+.formLogin input {
+    background: #eee;
+    border: none;
+    padding: 10px 20px;
+    width: 250px;
+    margin-bottom: 10px;
+    border-radius: 3px;
+    outline: none;
+        font: normal 14px 'OpenSansRegular', Arial, Helvetica, sans-serif;
+color:#aaa;
+}
+a.bLogin {
+    text-decoration: none;
+            font: normal 18px 'OpenSansSemibold', Arial, Helvetica, sans-serif;
+    background: #d32c06 ;
+    color:#fff;
+    padding: 5px 15px;
+    margin-top: 20px;
+/*    margin-left: 214px;*/
+    border-radius: 3px;
+}
+a.bLogin:hover {
+    background: #17a752 ;
+}
+.introLogin h1 {
+    font: normal 34px 'OpenSansSemibold', Arial, Helvetica, sans-serif;
+    color:#fff;
+    padding: 200px 0 0 100px;
+    width: 300px;
+
+}
+.introLogin p {
+    font: normal 16px/28px 'OpenSansRegular', Arial, Helvetica, sans-serif;
+    color:#fff;
+    width: 300px;
+    padding: 0 0 0 100px;
 }
 /* specific : e 
 ============================================= */
