--- a/application/views/frontend/navigation.html
+++ b/application/views/frontend/navigation.html
@@ -7,7 +7,7 @@
                     <!-- logo : e -->
                 <!-- menu top : s -->
                 <div class="menuTop left">
-				<?php if($this->load->controller()!='login'): ?>
+				<?php if($this->load->controller()!='login'&&$this->load->controller()!='register'): ?>
                     <ul>
                         <li>
                             <a href="#" id="listProduct">Hobby<i class="icon-down-micro"></i></a>
