--- a/application/views/frontend/navigation-left.html
+++ b/application/views/frontend/navigation-left.html
@@ -12,7 +12,7 @@
                 <div class="userNameHelp clearfix">
                     <div class="userName left">
                         <div class="imgUserName left"></div>
-                        <a href="#"><?=$nickname?>
+                        <a href="#"><?=$users['nickname']?>
  
                         </a>
                     </div>
